force-app/main/default/objects/C_Field_Mapping__c/C_Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>Maps a form question answer to a Salesforce object field for automatic data writeback on submission</description>
    <label>Field Mapping</label>
    <nameField>
        <label>Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>