force-app/main/default/objects/C_Field_Mapping__c/fields/C_External_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>C_External_Id_Field__c</fullName>
    <label>External ID Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>