force-app/main/default/objects/C_Field_Mapping__c/fields/C_Form_Target__c.field-meta.xml
<CustomField>
    <fullName>C_Form_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Target</label>
    <referenceTo>C_Form_Target__c</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>C_Field_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>