force-app/main/default/objects/C_Field_Mapping__c/fields/C_Mapping_Type__c.field-meta.xml
<CustomField>
    <fullName>C_Mapping_Type__c</fullName>
    <label>Mapping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Field_Value</fullName><default>true</default><label>Field Value</label></value>
            <value><fullName>Static_Value</fullName><default>false</default><label>Static Value</label></value>
            <value><fullName>File_Attachment</fullName><default>false</default><label>File Attachment</label></value>
            <value><fullName>Table_JSON</fullName><default>false</default><label>Table JSON</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>