force-app/main/default/objects/C_Field_Mapping__c/fields/C_Question__c.field-meta.xml
<CustomField>
    <fullName>C_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>C_Question__c</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>C_Field_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>