force-app/main/default/objects/C_Field_Mapping__c/fields/C_Record_Operation__c.field-meta.xml
<CustomField>
    <fullName>C_Record_Operation__c</fullName>
    <label>Record Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update</fullName>
                <default>true</default>
                <label>Update</label>
            </value>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Upsert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>