force-app/main/default/objects/C_Field_Mapping__c/fields/C_Static_Value__c.field-meta.xml
<CustomField>
    <fullName>C_Static_Value__c</fullName>
    <label>Static Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>