force-app/main/default/objects/C_Field_Mapping__c/fields/C_Target_Field__c.field-meta.xml
<CustomField>
    <fullName>C_Target_Field__c</fullName>
    <label>Target Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>