force-app/main/default/objects/C_Field_Mapping__c/listViews/All_Field_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Field_Mappings</fullName>
    <columns>NAME</columns>
    <columns>C_Question__c</columns>
    <columns>C_Target_Object__c</columns>
    <columns>C_Target_Field__c</columns>
    <columns>C_Record_Operation__c</columns>
    <columns>C_Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Field Mappings</label>
</ListView>